--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-PyYAML==5.1.2
+#PyYAML==5.4
 certifi==2018.10.15
 chardet==3.0.4
 idna==2.8
-requests==2.22.0
-urllib3==1.24.1
-wsgiref==0.1.2
+requests
+urllib3==1.26.5
+#wsgiref==0.1.2
